# ahlan-commerce

./: .env.example  .gitignore  AGENTS.md  COMPLETE_PROJECT_REVERSE_ENGINEERING_AND_ARCHITECTURE_GUIDE.md  Cargo.toml  Makefile  README.md  atlas.hcl  docker-compose.prod.yml  mprocs.yaml
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: index.css  main.tsx
apps/admin/src/components/: EmptyState.tsx  ErrorAlert.tsx  LoadingSpinner.tsx  ProductCreateForm.tsx  ProductTable.tsx
apps/admin/src/hooks/: useProducts.ts
apps/admin/src/lib/: graphqlClient.ts
apps/admin/src/routes/: __root.tsx  index.tsx  products.tsx
apps/api/: .env  Cargo.toml  Dockerfile
apps/api/specs/: product-prd.md  product-scenarios.md
apps/api/src/: cache.rs  config.rs  dtos.rs  errors.rs  handlers.rs  lib.rs  main.rs  openapi.rs  routes.rs  storefront.rs
apps/api/src/compat/: handler.rs  mod.rs  product_adapter.rs
apps/api/src/graphql/: mod.rs  mutation.rs  query.rs  types.rs
apps/api/tests/: api_tests.rs  compat_integration.rs  graphql_tests.rs  storefront_tests.rs
apps/api/tests/helpers/: mod.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
daily-logs/: 15june.md  16june.md  17june.md  18june.md  22june.md  23june.md  24june.md  25june.md  28june.md  29june.md
db/migrations/: 20260618031436_initial_products.sql  20260624032734_import_jobs.sql  atlas.sum
db/queries/: create_product.sql  get_product_by_handle.sql  import_jobs.sql  list_products.sql  list_published_products.sql  update_product_publication.sql
db/schema/: initial-products.sql  products.sql
docs/: COMPREHENSIVE_PROJECT_GUIDE.md  architecture.md  chapter-04-learning-guide.md  commands.md  compat-api.md  dal-alternatives.md  dal.md  deployment-prep.md  deployment.md  final-handoff.md  learning-log.md  local-runtime.md  manual-browser-check.md  manual-schema-change.md  operations.md  raw-sql-drift.md  runtime-notes-task2.md  setup.md
specs/: compatibility-adr.md  compatibility-prd.md
tasks/: Cargo.toml
tasks/src/: catalog.rs  main.rs
