[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.14.0", features = ["v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
tower = { version = "0.5.3", features = ["util"] }
catalog = { path = "../../packages/catalog" }
