[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6.2", features = ["trace"] }
uuid.workspace = true
chrono.workspace = true
tower = { version = "0.5.3", features = ["util"] }
redis = { version = "0.25", features = ["tokio-comp"] }
catalog.workspace = true
db.workspace = true
dotenvy.workspace = true
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-axum = "0.1.2"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
