[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v7", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
catalog = { path = "../../packages/catalog" }
db = { path = "../../packages/db" }
api = { path = "../api" }
dotenvy = "0.15.7"
tokio-postgres = "0.7.18"
