[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
catalog.workspace = true
db.workspace = true
dotenvy.workspace = true
tokio-postgres.workspace = true
